css/px-app-nav.css
/* ... */
:host input[type="button"] {
  -webkit-appearance: button;
  /* 2 */
  cursor: pointer;
  /* 3 */ }

/**
   * Re-set default cursor for disabled elements.
   */
button[disabled], html input[disabled] {
  cursor: default; }

:host input[disabled] {
  cursor: default; }

/**
   * Remove inner padding and border in Firefox 4+.
   */
button::-moz-focus-inner, input::-moz-focus-inner {
  border: 0;
  padding: 0; }

/**
   * Address Firefox 4+ setting `line-height` on `input` using `!important` in
   * the UA stylesheet.
   */
input {
  line-height: normal; }

/**
   * It's recommended that you don't attempt to style these elements.
   * Firefox's implementation doesn't respect box-sizing, padding, or width.
   *
   * 1. Address box sizing set to `content-box` in IE 8/9/10.
   * 2. Remove excess padding in IE 8/9/10.
   */
input[type="checkbox"], input[type="radio"] {
  box-sizing: border-box;
  /* 1 */
  padding: 0;
  /* 2 */ }

/**
   * Fix the cursor style for Chrome's increment/decrement buttons. For certain
   * `font-size` values of the `input`, it causes the cursor style of the
   * decrement button to change from `default` to `text`.
   */
input[type="number"]::-webkit-inner-spin-button, input[type="number"]::-webkit-outer-spin-button {
  height: auto; }

/**
   * 1. Address `appearance` set to `searchfield` in Safari and Chrome.
   * 2. Address `box-sizing` set to `border-box` in Safari and Chrome
   *    (include `-moz` to future-proof).
   */
input[type="search"] {
  -webkit-appearance: textfield;
  /* 1 */
  /* 2 */
  box-sizing: content-box; }

/**
   * Remove inner padding and search cancel button in Safari and Chrome on OS X.
   * Safari (but not Chrome) clips the cancel button when the search input has
   * padding (and `textfield` appearance).
   */
input[type="search"]::-webkit-search-cancel-button, input[type="search"]::-webkit-search-decoration {
  -webkit-appearance: none; }

/**
   * Define consistent border, margin, and padding.
   */
fieldset {
  border: 1px solid #c0c0c0;
  margin: 0 2px;
  padding: 0.35em 0.625em 0.75em; }

/**
   * 1. Correct `color` not being inherited in IE 8/9/10/11.
   * 2. Remove padding so people aren't caught out if they zero out fieldsets.
   */
legend {
  border: 0;
  /* 1 */
  padding: 0;
  /* 2 */ }

/**
   * Remove default vertical scrollbar in IE 8/9/10/11.
   */
textarea {
  overflow: auto; }

/**
   * Don't inherit the `font-weight` (applied by a rule above).
   * NOTE: the default cannot safely be changed in Chrome and Safari on OS X.
   */
optgroup {
  font-weight: bold; }

/* Tables
     ========================================================================== */
/**
   * Remove most spacing between table cells.
   */
table {
  border-collapse: collapse;
  border-spacing: 0; }

td, th {
  padding: 0; }

/*------------------------------------*\
    #PX-BOX-SIZING-DESIGN
\*------------------------------------*/
/*------------------------------------*\
    #PX-FUNCTIONS-DESIGN
\*------------------------------------*/
/**
 * Sass functions for Predix Experience
 */
/**
   * Set the global `box-sizing` state to `border-box`.
   *
   * css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice
   * paulirish.com/2012/box-sizing-border-box-ftw
   */
html {
  box-sizing: border-box; }

:host {
  /*! Comment to prevent cssmin munging this rule with html above and borking Safari */
  box-sizing: border-box; }

*, *:before, *:after {
  box-sizing: inherit; }

/*------------------------------------*\
    #PX-HELPERS-DESIGN
\*------------------------------------*/
/**
 * A series of helper classes to use arbitrarily. Only use a helper class if an
 * element/component doesn’t already have a class to which you could apply this
 * styling, e.g. if you need to float `.main-nav` left then add `float:left;` to
 * that ruleset as opposed to adding the `.float--left` class to the markup.
 *
 * A lot of these classes carry `!important` as you will always want them to win
 * out over other selectors.
 */
/*------------------------------------*\
    #PX-FUNCTIONS-DESIGN
\*------------------------------------*/
/**
 * Sass functions for Predix Experience
 */
/**
   * Add/remove floats
   */
.float--right {
  float: right !important; }

.float--left {
  float: left !important; }

.float--none {
  float: none !important; }

/**
   * Text alignment
   */
.text--left {
  text-align: left !important; }

.text--center {
  text-align: center !important; }

.text--right {
  text-align: right !important; }

/**
   * Add a help cursor to any element that gives the user extra information on
   * `:hover`.
   */
.informative {
  cursor: help !important; }

/**
   * Mute an object by reducing its opacity.
   */
.muted {
  opacity: 0.5 !important;
  filter: alpha(opacity=50) !important; }

/**
   * Align items to the right where they imply progression/movement forward, e.g.:
   *
     <p class=proceed><a href=#>Read more...</a></p>
   *
   */
.proceed {
  text-align: right !important; }

/**
   * Apply capital case to an element (usually a `strong`).
   */
.caps {
  text-transform: uppercase !important; }

/**
   * Hide visually and from screen readers:
   * http://juicystudio.com/article/screen-readers-display-none.php
   */
.hidden {
  display: none !important;
  visibility: hidden; }

/**
   * Hide content off-screen without resorting to `display:none;`
   */
.a11y, .visuallyhidden {
  position: absolute !important;
  overflow: hidden !important;
  width: 1px !important;
  height: 1px !important;
  margin: -1px !important;
  border: 0 !important;
  padding: 0 !important;
  clip: rect(0 0 0 0) !important; }

.a11y.focusable:active, .a11y.focusable:focus, .visuallyhidden.focusable:active, .visuallyhidden.focusable:focus {
  position: static;
  overflow: visible;
  width: auto;
  height: auto;
  margin: 0;
  clip: auto; }
/* ... */

